# wagtail-link-field

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml  testmanage.py  tox.ini
wagtail_link_field/: __init__.py  apps.py  blocks.py  enums.py  fields.py  panels.py  utils.py
wagtail_link_field/static/wagtail_link_field/js/: link-block.js
wagtail_link_field/templates/wagtail_link_field/: link_tag.html
wagtail_link_field/templatetags/: wagtail_link_field_tags.py
wagtail_link_field/test/: apps.py  models.py  settings.py
wagtail_link_field/test/migrations/: 0001_initial.py
wagtail_link_field/tests/: test_blocks.py  test_enums.py  test_fields.py  test_panels.py  test_templatetags.py  test_title_methods.py  test_utils.py
